--- a/naive_bayes.ipynb
+++ b/naive_bayes.ipynb
@@ -6,13 +6,27 @@
    "source": [
     "# Naive Bayes Classifier for Natural Language Processing\n",
     "\n",
-    "This article will perform sentiment analysis on a series of tweets. Some of which pertain to natural disaster / terrorist incidents (class 1), the others are innocent drivel (class 0). This post will review the Naive Bayes approach to classifying text. \n",
+    "This article will perform sentiment analysis on a series of tweets.\n",
+    "Some of which pertain to natural disaster / terrorist incidents\n",
+    "(class 1), the others are innocent drivel (class 0).\n",
     "\n",
+    "In this post we will learn\n",
     "\n",
-    "##  How to calculate Naive Bayes Probabilities\n",
+    "1): What is a Naive Bayes classifier.\n",
     "\n",
-    "https://medium.com/@theflyingmantis/text-classification-in-nlp-naive-bayes-a606bf419f8c\n",
-    "We want to find the probability of a certain class 1 or 2 given some input text X. In maths speak this is P(C_j | X).  We can calculate this from Bayes theorem as \n",
+    "2): Implementation in Python\n",
+    "\n",
+    "3): Review Performance\n",
+    "\n",
+    "##  Naive Bayes Probabilities\n",
+    "\n",
+    "Training a model to label a sample of text as positive / negative\n",
+    "is known as Natural Language Processing (NLP) binary classification.\n",
+    "\n",
+    "A common choice of model for such a task is the Naive Bayes classifier.\n",
+    "Using [Bayes Theorem](https://medium.com/@theflyingmantis/text-classification-in-nlp-naive-bayes-a606bf419f8c\n",
+    "),\n",
+    "we can formulate our outcome variable as the probability of a certain class 1 or 2 given some input text X. In maths speak this is P(C_j | X).  We can calculate this from Bayes theorem as\n",
     "\n",
     "P(C_j | X) = P(X | C_j) P(C_j) / P(X).\n",
     "\n",
@@ -24,11 +38,25 @@
     "\n",
     "#### __P(C_j):__ \n",
     "\n",
-    "This is simple enough. It is just the relative fraction of class _i_ in the data set (i.e. for the positive class, this is the number of positives divided by the total number of samples in the training data.\n",
+    "This is simple enough. It is just the relative\n",
+    "fraction of class _i_ in the data set (i.e.\n",
+    "for the positive class, this is the number of\n",
+    "positives divided by the total number of samples\n",
+    "in the training data).\n",
     "\n",
     "#### __P(X | C_j):__\n",
     "\n",
-    "Representing the input as a set of features x1, x2 ...xn, P(X) = P(x1, x2...xn). We can rewrite P(X | C_j) as P(x1,x2...xn | C_j). We use the 'Bag of Words' assumption to calculate this quantity. This assumes the order of the words doesnt matter (an incorrect assumption but one that often doesnt introduce too much error). Naive Bayes assumes features (or words) are independent so\n",
+    "Representing the input as a set of features\n",
+    "x1, x2 ...xn, P(X) = P(x1, x2...xn).\n",
+    "We can rewrite P(X | C_j) as P(x1,x2...xn | C_j).\n",
+    "Now comes the trick. The word _Naive_ in Naive Bayes\n",
+    "classifiers means that we make the assumption that\n",
+    "probabilities of all words are independent of\n",
+    "each other. This chiefly means that we assume\n",
+    "the order of the words doesnt matter (an incorrect assumption\n",
+    "but one that often doesnt introduce too much error), but\n",
+    " also allows us to rewrite our conditional\n",
+    " probability as\n",
     "\n",
     "P(x1,x2...xn | C_j) = P(x1|C_j) P(x2 | C_j) .... P(xn | C_j).\n",
     "\n",
@@ -36,9 +64,18 @@
     "\n",
     "P(xi | C_j) = count (xi, C_j) / sum_k (xk, C_j).\n",
     "\n",
-    "i.e. this counts all occurrences of word xi in all inputs of class C_j and divides them by the sum of counts of all words in the vocabulary. Laplace smoothing can be used to mitigate the effects of zero occurrences of words and dividing by zero.\n",
+    "i.e. this counts all occurrences of word xi in\n",
+    "all inputs of class C_j and divides them by the\n",
+    "sum of counts of all words in the vocabulary.\n",
+    "Laplace smoothing can be used to mitigate the\n",
+    "effects of zero occurrences of words and\n",
+    "dividing by zero.\n",
     "\n",
-    "In summary, the Naive Bayes probability for input X, P(X | C_j) P(C_j), is calculated by multiplying together P(xi | C_j) for all words in our vocabulary and multiplying the result by P(C_J). Lets now set one up using sci-kit learn."
+    "In summary, the Naive Bayes probability for\n",
+    "input X, P(X | C_j) P(C_j), is calculated by\n",
+    "multiplying together P(xi | C_j) for all words\n",
+    "in our vocabulary and multiplying the result by\n",
+    "P(C_J). Lets now set one up using sci-kit learn."
    ]
   },
   {
